--- a/RubyRailsProject/blog/Gemfile
+++ b/RubyRailsProject/blog/Gemfile
@@ -27,6 +27,11 @@ gem "stimulus-rails"
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 gem "jbuilder"
 
+gem "money"
+
+gem "i18n"
+
+gem 'draper'
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
 
